--- a/src/assets/scss/animation.scss
+++ b/src/assets/scss/animation.scss
@@ -7,6 +7,27 @@
   }
 }
 
-.fadeIn {
-  animation: fadeIn 0.3s;
+.fade-in {
+  animation: fadeIn 0.3s forwards;
+}
+
+@keyframes fadeInMove {
+  from {
+    opacity: .1;
+    transform: translateY(30%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in-move {
+  &-enter {
+    opacity: .1;
+    transform: translateY(30%);
+  }
+  &-entered {
+    animation: fadeInMove 1s 1 forwards;
+  }
 }
