--- a/src/routes/home/components/DesignCategory/DesignCategory.scss
+++ b/src/routes/home/components/DesignCategory/DesignCategory.scss
@@ -16,7 +16,7 @@
     box-shadow: 0 10px 30px 0 rgba(96, 108, 147, 0.05);
     border-radius: 4px;
 
-    &:hover {
+    &.active {
       box-shadow: 0 15px 33px 0 rgba(96, 108, 147, 0.22);
       transform: translateY(-4px);
     }
@@ -57,6 +57,28 @@
 
     &:hover {
       background-color: $primary-color;
+    }
+  }
+
+  .design-category-slider {
+    transition: transform .5s cubic-bezier(.32,.88,.37,.94);
+    &-container {
+      top: 80px;
+      bottom: 80px;
+      right: 0;
+      width: 45%;
+      overflow: hidden;
+    }
+
+    &-item {
+      width: 100%;
+    }
+
+    &-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
     }
   }
 }
