--- a/src/routes/home/components/Slider/Slider.scss
+++ b/src/routes/home/components/Slider/Slider.scss
@@ -1,4 +1,5 @@
 @import "~@/assets/scss/function";
+@import "~@/assets/scss/animation";
 
 .DashboardSlider {
   width: 100%;
@@ -62,6 +63,16 @@
       height: 100%;
     }
 
+    &_image {
+      display: block;
+      height: 60%;
+      @include center-translate(both);
+
+      &.slider-image-cellphone {
+        height: 80%;
+      }
+    }
+
     &_pagination {
       &-text {
         position: absolute;
@@ -71,7 +82,7 @@
         transform: rotate(90deg);
         font-family: "Gotham A", "Gotham B", Arial, sans-serif;
         font-size: 16px;
-        color: rgba(white, .8);
+            color: rgba(white, .8);
       }
 
       &-rotate {
@@ -115,6 +126,47 @@
           background-color: rgba(white, .3);
         }
       }
+    }
+  }
+
+  .slider-indicator {
+    position: absolute;
+    bottom: 70px;
+    left: calc(50% - 20px);
+    &-tip {
+      margin-bottom: 2px;
+      font-size: 14px;
+      color: rgba(white, .9);
+      letter-spacing: 1px;
+    }
+
+    @keyframes fadeArrow {
+      from {
+        opacity: .2;
+        transform: translateY(0) rotate(90deg);
+      }
+
+      to {
+        opacity: .6;
+        transform: translateY(100%) rotate(90deg);
+      }
+    }
+
+    .ic {
+      font-size: 12px;
+      animation: fadeArrow 1s infinite cubic-bezier(.42,.12,.52,1);
+      line-height: 1;
+      color: white;
+      transform: translateY(0) rotate(90deg);
+
+      &:last-of-type {
+        position: relative;
+        top: -2px;
+      }
+    }
+
+    > * {
+      display: block;
     }
   }
 
