--- a/src/routes/App.scss
+++ b/src/routes/App.scss
@@ -1,5 +1,6 @@
 @import "~@/assets/scss/base.scss";
 @import "~@/assets/scss/common.scss";
+@import "~@/assets/scss/rem.scss";
 
 .App {
   height: 100%;
