--- a/src/routes/home/components/DesignCategory/DesignCategory.scss
+++ b/src/routes/home/components/DesignCategory/DesignCategory.scss
@@ -23,6 +23,10 @@
 
     &:last-of-type {
       margin-bottom: 0;
+
+      .design-category-picture {
+        margin-top: -20px;
+      }
     }
   }
 
@@ -31,7 +35,6 @@
     vertical-align: top;
     margin-right: 40px;
     width: 120px;
-    height: 120px;
   }
 
   .design-category-info {
