--- a/src/routes/App.scss
+++ b/src/routes/App.scss
@@ -9,7 +9,7 @@
   cursor: url("https://file.5rs.me/oss/uploadfe/png/c4e7b3ea3298cc864bcd14de2e18ce85.png"), auto;
 }
 
-.cursor-pointer {
+.cursor-pointer, a {
   cursor: url("https://file.5rs.me/oss/uploadfe/png/e0fd3ce461ad33d4daa29faaf7a8d013.png") 15 5, auto;
 }
 
