--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,6 +11,10 @@
   transition: transform .3s;
   box-shadow: 0 3px 20px 0 rgba(96, 108, 147, 0.13);
 
+  &.top {
+    box-shadow: 0 0 0 0 rgba(96, 108, 147, 0.13);
+  }
+
   .dashboard-header-container {
     display: flex;
     align-items: center;
@@ -30,4 +34,8 @@
   }
 
   @include responsive(padding-left, 0, 20px);
+
+  .contact-me {
+    padding-right: 10px;
+  }
 }
