--- a/src/routes/home/components/DesignCategory/DesignCategory.scss
+++ b/src/routes/home/components/DesignCategory/DesignCategory.scss
@@ -15,6 +15,10 @@
     box-shadow: 0 10px 30px 0 rgba(96, 108, 147, 0.05);
     border-radius: 4px;
 
+    @include phone {
+      padding: 30px 15px 20px 20px;
+    }
+
     &.active {
       box-shadow: 0 15px 33px 0 rgba(96, 108, 147, 0.22);
       transform: translateY(-4px);
@@ -37,6 +41,11 @@
     margin-right: 40px;
     width: 120px;
     min-height: 1px;
+
+    @include phone {
+      width: 80px;
+      margin-right: 15px;
+    }
   }
 
   .design-category-info {
@@ -59,6 +68,10 @@
     line-height: 34px;
     color: white;
     background-color: rgba(96, 103, 242, 0.7);
+
+    @include phone {
+      margin-top: 10px;
+    }
 
     &:hover {
       background-color: $primary-color;
