--- a/src/routes/home/components/DesignStandard/DesignStandard.scss
+++ b/src/routes/home/components/DesignStandard/DesignStandard.scss
@@ -5,14 +5,67 @@
   background: url("https://file.5rs.me/oss/uploadfe/png/9df35e835f6837342d784c0e87bd1ed5.png") #6067f2 repeat;
   background-size: 4%;
 
+  @include phone {
+    height: 620px;
+  }
+
   .design-standard {
     &-title {
+      position: relative;
       top: 70px;
       @include center-translate(x);
-      font-size: 45px;
+      @include responsive(font-size, 45px, 45px, 40px, 30px);
       padding: 0 25px;
       margin: auto;
-      border: solid 1px #ffffff;
+      border: solid 1px white;
+
+      &-dot {
+        position: absolute;
+        width: 6px;
+        height: 6px;
+        background-color: #ffffff;
+        box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.18);
+        border: solid 1px rgba(207, 221, 255, 0.25);
+        transform: translate(-50%, -50%);
+
+        @include phone {
+          width: 4px;
+          height: 4px;
+        }
+
+        &:nth-of-type(1) {
+          left: 0;
+          top: 0;
+        }
+        &:nth-of-type(2) {
+          left: 50%;
+          top: 0;
+        }
+        &:nth-of-type(3) {
+          left: 100%;
+          top: 0;
+        }
+        &:nth-of-type(4) {
+          left: 100%;
+          top: 50%;
+        }
+        &:nth-of-type(5) {
+          left: 100%;
+          top: 100%;
+        }
+        &:nth-of-type(6) {
+          left: 50%;
+          top: 100%;
+        }
+        &:nth-of-type(7) {
+          left: 0;
+          top: 100%;
+        }
+        &:nth-of-type(8) {
+          left: 0;
+          top: 50%;
+        }
+      }
     }
 
     &-preview-btn {
@@ -21,8 +74,11 @@
       padding: 5px 35px;
       background-color: rgba(white, 0.1);
       border-radius: 70px;
-      border: solid 1px #ffffff;
-      transition: background-color .3s;
+      border: solid 1px white;
+      opacity: 0;
+      transition: all .3s;
+      transform: scale(0);
+      white-space: nowrap;
 
       &:hover {
         background-color: rgba(white, 0.25);
@@ -30,20 +86,18 @@
     }
 
     &-pc {
-      transition: all .6s;
-      @include not-phone {
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        width: 40vw;
-        max-width: 500px;
-        opacity: 1;
-        transform: translate(-50%, -50%) scale(1);
+      transition: all .8s;
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      width: 40vw;
+      max-width: 500px;
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1);
 
-        &:not(.active) {
-          opacity: .75;
-          transform: translate(-130%, -50%) scale(.7);
-        }
+      &:not(.active) {
+        opacity: .75;
+        transform: translate(-130%, -50%) scale(.7);
       }
       &-image {
         width: 100%;
@@ -51,24 +105,30 @@
     }
 
     &-mobile {
-      transition: all .6s;
+      transition: all .8s;
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      width: 20vw;
+      max-width: 230px;
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1);
 
-      @include not-phone {
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        width: 20vw;
-        max-width: 230px;
-        opacity: 1;
-        transform: translate(-50%, -50%) scale(1);
-
-        &:not(.active) {
-          opacity: .75;
-          transform: translate(120%, -50%) scale(.7);
-        }
+      &:not(.active) {
+        opacity: .75;
+        transform: translate(120%, -50%) scale(.7);
       }
       &-image {
         width: 100%;
+      }
+    }
+
+    &-pc, &-mobile {
+      &.active {
+        .design-standard-preview-btn {
+          opacity: 1;
+          transform: scale(1);
+        }
       }
     }
   }
