--- a/src/routes/home/components/DesignCategory/DesignCategory.scss
+++ b/src/routes/home/components/DesignCategory/DesignCategory.scss
@@ -5,6 +5,10 @@
 
   .website-center-container {
     padding: 80px 0;
+
+    @include phone {
+      padding: 5vw 0;
+    }
   }
 
   .design-category-item {
@@ -16,6 +20,8 @@
     border-radius: 4px;
 
     @include phone {
+      width: 90%;
+      margin: auto;
       padding: 30px 15px 20px 20px;
     }
 
@@ -26,6 +32,10 @@
 
     &-wrap {
       margin-bottom: 48px;
+
+      @include phone {
+        margin-bottom: 5vw;
+      }
 
       &:last-of-type {
         margin-bottom: 0;
@@ -43,7 +53,7 @@
     min-height: 1px;
 
     @include phone {
-      width: 80px;
+      width: 110px;
       margin-right: 15px;
     }
   }
@@ -55,6 +65,10 @@
 
   .design-category-title {
     font-size: 20px;
+
+    @include phone {
+      font-size: 24px;
+    }
   }
 
   .design-category-desc {
@@ -80,6 +94,11 @@
 
   .design-category-slider {
     transition: transform .5s cubic-bezier(.32,.88,.37,.94);
+
+    @include phone {
+      display: none;
+    }
+
     &-container {
       top: 80px;
       bottom: 80px;
