--- a/src/assets/scss/animation.scss
+++ b/src/assets/scss/animation.scss
@@ -11,6 +11,19 @@
   animation: fadeIn 0.3s forwards;
 }
 
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.fade-out {
+  animation: fadeOut 0.3s forwards;
+}
+
 @keyframes fadeInMove {
   from {
     opacity: .1;
