--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 80px;
   z-index: 10;
   background-color: white;
   transition: transform .3s;
@@ -38,6 +38,10 @@
   .contact-me {
     padding-right: 10px;
     color: #606C93;
+
+    .ic {
+      margin-right: 8px;
+    }
 
     &:hover {
       color: $primary-color;
