--- a/src/routes/gallery/components/Navigator/Navigator.scss
+++ b/src/routes/gallery/components/Navigator/Navigator.scss
@@ -56,7 +56,7 @@
       transform-origin: top center;
 
       &-item {
-        color: #606c93;
+        color: $secondary-color;
 
         &_title {
           display: block;
