--- a/src/routes/home/components/DesignCategory/DesignCategory.scss
+++ b/src/routes/home/components/DesignCategory/DesignCategory.scss
@@ -1,7 +1,7 @@
 @import "~@/assets/scss/function";
 
 .DesignCategory {
-  background-color: #f5f7ff;
+  background-color: $bg-color;
 
   .website-center-container {
     padding: 80px 0;
@@ -12,7 +12,6 @@
   }
 
   .design-category-item {
-    width: 50%;
     padding: 50px 24px 40px 40px;
     transition: all .3s;
     background-color: white;
@@ -20,8 +19,6 @@
     border-radius: 4px;
 
     @include phone {
-      width: 90%;
-      margin: auto;
       padding: 30px 15px 20px 20px;
     }
 
@@ -31,10 +28,12 @@
     }
 
     &-wrap {
+      width: 50%;
       margin-bottom: 48px;
 
       @include phone {
-        margin-bottom: 5vw;
+        width: 90%;
+        margin: auto auto 5vw;
       }
 
       &:last-of-type {
@@ -59,7 +58,7 @@
   }
 
   .design-category-info {
-    color: #606c93;
+    color: $secondary-color;
     overflow: hidden;
   }
 
