--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -10,6 +10,7 @@ $font-size: 14px !default;
 $pad-font-size: 12px !default;
 $font-line-height: 1.5 !default;
 $font-family: PingFangSC, "Microsoft Yahei", Helvetica, Tahoma, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", STXihei, STHeiti, Heiti, SimSun, sans-serif !default;
+$title-font-family: PingFangSC-Semibold, "Microsoft Yahei", sans-serif !default;
 
 // color
 $primary-color: #6067f2 !default; // 主色
