--- a/src/routes/gallery/mobile/app/APP.scss
+++ b/src/routes/gallery/mobile/app/APP.scss
@@ -6,6 +6,10 @@
     margin-right: 5%;
     border-radius: 30px;
 
+    @include phone {
+      border-radius: 8px;
+    }
+
     &:nth-of-type(3n) {
       margin-right: 0;
     }
