--- a/src/routes/home/components/DesignStandard/DesignStandard.scss
+++ b/src/routes/home/components/DesignStandard/DesignStandard.scss
@@ -77,6 +77,7 @@
       white-space: nowrap;
 
       @include phone {
+        margin-top: 0;
         padding: 4px 60px;
         font-size: 20px;
       }
@@ -124,6 +125,9 @@
     }
 
     &-mobile {
+      @include phone {
+        margin-top: 50px;
+      }
       @include not-phone {
         transform: translateX(-5%);
       }
